deployment.yml
#deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amazon-deployment
  namespace: default
  labels:
    app: amazon-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: amazon-app
      tier: frontend
      version: 1.0.0
#pod tempalte
  template:
    metadata:
      labels:
        app: amazon-app
        tier: frontend
        version: 1.0.0
    spec: # Pod spec
      containers:
      - name: amazon-container
        image: ooghenekaro/amazon:42
        ports:
        - containerPort: 3000
        
        
---
apiVersion: v1
kind: Service
metadata:
  name: amazon-service
  labels:
    app: amazon-app
spec:
#  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: amazon-app
